--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -3,19 +3,14 @@ spring.application.name=ElectricityBill
 #port no code
 server.port:9001
 
-# View Resolver
-spring.mvc.view.prefix=/views/
-spring.mvc.view.suffix=.jsp
-
-# DataSource settings for PostgreSQL
-spring.datasource.url=jdbc:postgresql://dpg-cpuj4hmehbks73eign6g-a.oregon-postgres.render.com/bank_database_mcpp
-spring.datasource.username=bank_database_mcpp_user
-spring.datasource.password=buZaQ6PHDSeFm1V8Is9Tdw0oIaVFhQ5M
+# DataSource settings: set here your own configurations for the database connection
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/nikki?sslMode=REQUIRED
+spring.datasource.username=root
+spring.datasource.password=root
 
 # JPA settings
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
-
-# Logging
-logging.level.org.hibernate=DEBUG
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
